Update title and date in index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Coalesce Biosciences</title>
+  <title>Wake Forest University Vesicant Exposure Research Core</title>
   <style>
     body {
       background-color: #9E7E38;
@@ -22,7 +22,7 @@
   <div> 
     <img src="coalesce_logo.png" alt="Coalesce Biosciences Logo" style="width: 600px; margin-bottom: 2rem;">
     <div>WFU Vesicant website is Coming</div> 
-    <div style="color: white; margin-top: 1rem; font-size: 1rem;">1.31.2026</div>
+    <div style="color: white; margin-top: 1rem; font-size: 1rem;">2.21.2026</div>
   </div> 
 </body>
 </html>
